# Vortekia

./: README.md
Program/: '  package.json  (+3 more)
Program/src-tauri/: .env  Cargo.toml  config.json  tauri.conf.json
Program/src-tauri/entities/: Cargo.toml
Program/src-tauri/entities/src/: user.rs
Program/src-tauri/migration/: Cargo.toml
Program/src-tauri/migration/src/: lib.rs  m20250221_014402_create_users.rs  m20250225_014402_create_users.rs  m20250225_065344_create_customers.rs  m20250225_065835_create_staff.rs  m20250226_005943_create_lost_and_found_log.rs  m20250226_010030_create_ride.rs  m20250226_012054_create_restaurant.rs  m20250226_013611_create_menu.rs  m20250226_033044_create_ride_queue.rs  m20250226_034346_create_ride_staff.rs  m20250226_040740_create_restaurant_staff.rs  m20250226_042701_create_store.rs  m20250226_043305_create_souvenir.rs  m20250226_044541_create_store_staff.rs  m20250226_045711_create_new_ride_proposal.rs  m20250226_050440_create_ride_deletion_proposal.rs  m20250226_060904_create_new_restaurant_proposal.rs  m20250226_070954_create_new_store_proposal.rs  m20250226_074110_create_store_deletion_proposal.rs  m20250226_075303_create_store_transaction.rs  m20250301_052358_seed_staff.rs  m20250301_104705_create_staff_schedule.rs  m20250303_104318_create_restaurant_transaction.rs  m20250304_210020_create_queue_request.rs  m20250304_213207_create_ride_transaction.rs  m20250305_051953_create_maintenance_task.rs  (+4 more)
Program/src-tauri/src/: factories.rs  handlers.rs  lib.rs  main.rs  models.rs  modules.rs  repositories.rs  services.rs  viewmodels.rs
(+401 files in other folders)
