[package]
name = "tpa-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tpa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio-macros = "2.5.0"
tokio = { version = "*", features = ["full"] }

sea-orm = { version = "1.1.5", features = [
  "sqlx-mysql",
  "runtime-async-std-native-tls",
  "macros",
] }

futures = "0.3.31"
dotenv = "0.15.0"

argon2 = "0.5.3"
rand = "0.8.4"
password-hash = "0.5"

gcloud-sdk = "0.26.3"
